# OOP

./: .gitignore  README.md
Dom1/: CMakeLists.txt
Dom1/ImageEditor/: CMakeLists.txt
Dom1/ImageEditor/include/: ImageEditor.h  dynamic_array.h  layer.h
Dom1/ImageEditor/src/: CMakeLists.txt  ImageEditor.cpp  dynamic_array.cpp  layer.cpp
Dom1/ImageEditor/tests/: CMakeLists.txt  dynamic_array_test.cpp  layer_test.cpp
Dom1/Main/: CMakeLists.txt  Main.cpp
Dom1/lib/: ImageEditor.h
Dom2/Main/: CMakeLists.txt  Test.cpp
Dom2/Simulator/: CMakeLists.txt  circuit.cpp  circuit.h  element.cpp  element.h  generator.cpp  generator.h  logical_circuit.cpp  logical_circuit.h  reader.cpp  reader.h  simulator.cpp  simulator.h  test.cpp  writer.cpp  writer.h
Dom2/Simulator/include/: circuit.h  element.h  exception.h  generator.h  logical_circuit.h  reader.h  simulator.h  writer.h
Dom2/Simulator/src/: circuit.cpp  element.cpp  generator.cpp  logical_circuit.cpp  reader.cpp  simulator.cpp  test.cpp  writer.cpp
Project/: CMakeLists.txt  main.cpp
Project/Compiler/include/: compiler.h  expression.h  program.h
Project/Compiler/src/: compiler.cpp  expression.cpp  program.cpp
Project/Machine/include/: logger.h  machine.h  memory.h  operation.h
Project/Machine/src/: logger.cpp  machine.cpp  memory.cpp  operation.cpp
Project/Utils/include/: config.h  exceptions.h  util.h
Project/Utils/src/: config.cpp  util.cpp
Project/lib/source/: CMakeLists.txt
Project/lib/source/include/concepts/: Interfaces.h
Project/lib/source/include/util/: Collect.h
